--- a/tpDesignPattern/pom.xml
+++ b/tpDesignPattern/pom.xml
@@ -9,5 +9,13 @@
           <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
   
+  <dependencies>
+       <dependency>
+    		<groupId>javax.inject</groupId>
+    		<artifactId>javax.inject</artifactId>
+    		<version>1</version>
+		</dependency>
+  </dependencies>
+  
   
 </project>
