--- a/tpSpringBootJpa/src/main/resources/application.properties
+++ b/tpSpringBootJpa/src/main/resources/application.properties
@@ -2,9 +2,9 @@ server.servlet.context-path=/tpSpringBootJpa
 server.port=8080
 logging.level.org=INFO
 #spring.datasource.driverClassName=com.mysql.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://localhost:3307/mydb?createDatabaseIfNotExist=true&serverTimezone=UTC
+#spring.datasource.url=jdbc:mysql://localhost:3306/mydb?createDatabaseIfNotExist=true&serverTimezone=UTC
 #spring.datasource.username=root
-#spring.datasource.password=root
+#spring.datasource.password=
 #spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.url=jdbc:h2:~/mydb
