--- a/tpSpring/tpSpringCore/pom.xml
+++ b/tpSpring/tpSpringCore/pom.xml
@@ -15,6 +15,13 @@
   
   <dependencies>
   
+  <dependency>
+    <groupId>org.projectlombok</groupId>
+    <artifactId>lombok</artifactId>
+    <version>1.18.6</version>
+    <scope>provided</scope>
+</dependency>
+  
 <dependency>
     <groupId>org.springframework</groupId>
     <artifactId>spring-context</artifactId>
