--- a/tpSpringD/pom.xml
+++ b/tpSpringD/pom.xml
@@ -1,11 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>fr.afcepf.al33</groupId>
-  <artifactId>tpSpring</artifactId>
+  <artifactId>tpSpringD</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>pom</packaging>
   <modules>
-  	<module>tpSpringWeb</module>
-  	<module>tpSpringCore</module>
+  	<module>tpSpringDWeb</module>
+  	<module>tpSpringDCore</module>
   </modules>
 </project>
