--- a/tpSpringD/tpSpringDCore/pom.xml
+++ b/tpSpringD/tpSpringDCore/pom.xml
@@ -39,6 +39,21 @@
     <artifactId>spring-test</artifactId>
     <version>${spring.version}</version>
 </dependency>
+
+<!-- ou bien mysqlConnector -->
+<dependency>
+    <groupId>com.h2database</groupId>
+    <artifactId>h2</artifactId>
+    <version>1.4.199</version>
+    <!-- <scope>test</scope> -->
+</dependency>
+
+<dependency>
+    <groupId>org.hibernate</groupId>
+    <artifactId>hibernate-core</artifactId>
+    <version>5.4.2.Final</version>
+</dependency>
+
      
   <dependency>
     <groupId>junit</groupId>
