--- a/tpSpringD/tpSpringDCore/src/main/resources/log4j.properties
+++ b/tpSpringD/tpSpringDCore/src/main/resources/log4j.properties
@@ -1,6 +1,6 @@
 log4j.rootLogger=warn, CONSOLE , RFILE
 
-log4j.logger.fr.afcepf.al33.tp=DEBUG, CONSOLE
+log4j.logger.fr.afcepf.al33.tp=DEBUG, CONSOLE, RFILE
 log4j.additivity.fr.afcepf.al33.tp=false
 
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
