--- a/tpSpringD/tpSpringDWeb/src/main/webapp/WEB-INF/web.xml
+++ b/tpSpringD/tpSpringDWeb/src/main/webapp/WEB-INF/web.xml
@@ -1,5 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
+  
+  <context-param>
+	<param-name>contextConfigLocation</param-name>
+	<param-value>classpath:/webSpringConf.xml</param-value>
+</context-param>
+
+<listener> <!-- pour charger la config Spring des le demarrage de l'appli dans tomcat -->
+ <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+</listener>
+  
   <servlet>
     <servlet-name>Faces Servlet</servlet-name>
     <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
