--- a/tpSpringBootJpa/src/main/resources/application.properties
+++ b/tpSpringBootJpa/src/main/resources/application.properties
@@ -14,4 +14,4 @@ spring.datasource.platform=h2
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create
 #enable spring-data (generated dao implementation classes)
-spring.data.jpa.repositories.enabled=false
+spring.data.jpa.repositories.enabled=true
