--- a/tpSpringBootJpa/pom.xml
+++ b/tpSpringBootJpa/pom.xml
@@ -73,6 +73,17 @@
 	</dependencies>
 	<build>
 		<finalName>${project.artifactId}</finalName>
+		<plugins>
+		  <plugin>
+			    <groupId>org.springframework.boot</groupId>
+			    <artifactId>spring-boot-maven-plugin</artifactId>
+			    <!-- <version>2.0.5.RELEASE</version> -->
+			    <configuration>
+			        <mainClass>fr.afcepf.al33.tp.MySpringBootApplication</mainClass>
+			       <!-- <layout>ZIP</layout> -->
+			    </configuration>
+			</plugin>
+		</plugins>
 	</build>
   
 </project>
