--- a/springBootWebServiceD/pom.xml
+++ b/springBootWebServiceD/pom.xml
@@ -16,6 +16,18 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 	<dependencies>
+	
+	<dependency>
+	    <groupId>org.apache.cxf</groupId>
+	    <artifactId>cxf-rt-frontend-jaxws</artifactId>
+	    <version>3.3.1</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.apache.cxf</groupId>
+	    <artifactId>cxf-rt-transports-http</artifactId>
+	    <version>3.3.1</version>
+	</dependency>
+	
 	     <dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
