--- a/clientWS/pom.xml
+++ b/clientWS/pom.xml
@@ -17,7 +17,7 @@
      <dependency>
 	    <groupId>org.glassfish.jersey.core</groupId>
 	    <artifactId>jersey-client</artifactId>
-	    <version>2.28</version>
+	    <version>2.26-b03</version>
 	</dependency>
   </dependencies>
   
