--- a/clientWS/pom.xml
+++ b/clientWS/pom.xml
@@ -19,6 +19,19 @@
 	    <artifactId>jersey-client</artifactId>
 	    <version>2.26-b03</version>
 	</dependency>
+	
+	<dependency>
+    <groupId>org.glassfish.jersey.media</groupId>
+    <artifactId>jersey-media-json-jackson</artifactId>
+    <version>2.26-b03</version>
+</dependency>
+	
+	 <dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.16.22</version>
+	</dependency>
+	
   </dependencies>
   
 </project>
