--- a/tpSpringBootJpa/pom.xml
+++ b/tpSpringBootJpa/pom.xml
@@ -38,6 +38,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
+<!-- 		<dependency> -->
+<!-- 	    	<groupId>org.springframework.data</groupId> -->
+<!-- 	    	<artifactId>spring-data-mongodb</artifactId> -->
+<!-- 		</dependency> -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
