--- a/appY/appY-rest-app/pom.xml
+++ b/appY/appY-rest-app/pom.xml
@@ -14,6 +14,10 @@
 		<packaging.type>jar</packaging.type>
 		<java.version>1.8</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<start-class>fr.afcepf.al33.MySpringBootApplication</start-class>
+	<properties>
+    
+</properties>
 	</properties>
 	<dependencies>
 	
@@ -98,10 +102,9 @@
 		  <plugin>
 			    <groupId>org.springframework.boot</groupId>
 			    <artifactId>spring-boot-maven-plugin</artifactId>
-			    <!-- <version>2.0.5.RELEASE</version> -->
-			    <configuration>
-			        <mainClass>fr.afcepf.al33.tp.MySpringBootApplication</mainClass>
-			       <!-- <layout>ZIP</layout> -->
+			      <configuration>
+			        <mainClass>fr.afcepf.al33.MySpringBootApplication</mainClass>
+			       <layout>ZIP</layout>
 			    </configuration>
 			</plugin>
 		</plugins>
