--- a/tpSpringBootJpa/pom.xml
+++ b/tpSpringBootJpa/pom.xml
@@ -38,10 +38,18 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
-<!-- 		<dependency> -->
-<!-- 	    	<groupId>org.springframework.data</groupId> -->
-<!-- 	    	<artifactId>spring-data-mongodb</artifactId> -->
-<!-- 		</dependency> -->
+ 		<dependency>
+ 	    	<groupId>org.springframework.data</groupId> 
+ 	    	<artifactId>spring-data-mongodb</artifactId>
+ 		</dependency>
+ 		 
+ 		<!-- embedded mongo db (like h2 = embedded sql server) -->
+ 		<dependency>
+		    <groupId>de.flapdoodle.embed</groupId>
+		    <artifactId>de.flapdoodle.embed.mongo</artifactId>
+		    <version>2.2.0</version>
+		    <!-- maybe scope test -->
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
